Added quota config validation for large numbers.

Per MESOS-10008, large scalar values overflow and can crash
the master. This patch imposes maximums for guarantees and limits
well below the overflow point, to prevent this from happening.

Review: https://reviews.apache.org/r/71595